@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.2" provider-name="L0RE">
+<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.3" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="plugin.video.youtube" version="6.1.0"/>
@@ -9,27 +9,26 @@
 		<provides>video</provides>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="en">Videoportal of EURONEWS</summary>
-		<summary lang="de">Videoportal von EURONEWS</summary>
-		<description lang="en">euronews offers a unique perspective on world affairs. euronews gives people the opportunity to form their own opinion, by presenting factual analysis and a variety of viewpoints.[CR]euronews World news daily 24 hours are available in 12 different editions in Arabic, English, French, German, Greek, Hungarian, Italian, Persian, Portuguese, Russian, Spanish and Turkish.</description>
-		<description lang="de">euronews bietet eine einzigartige Perspektive auf das Weltgeschehen. euronews gibt Menschen die Möglichkeit, sich eine eigene Meinung zu bilden, indem sachliche Analysen und eine Vielzahl von Standpunkten dargestellt werden.[CR]euronews Weltnachrichten täglich 24 Stunden gibt es in 12 versch. Ausgaben auf Arabisch, Englisch, Französisch, Deutsch, Griechisch, Ungarisch, Italienisch, Persisch, Portugiesisch, Russisch, Spanisch und Türkisch.</description>
-		<disclaimer lang="en">The author does not host or distribute any of the content displayed by this addon. The author does not have any affiliation with the content providers.</disclaimer>
-		<disclaimer lang="de">Die von diesem Addon dargestellten Inhalte werden von den Erstellern des Addons weder gehostet oder verbreitet, noch stehen die Ersteller in irgendeiner Beziehung zu den Anbietern des Inhalts.</disclaimer>
+		<summary lang="de_DE">Videoportal von EURONEWS</summary>
+		<summary lang="en_GB">Videoportal of EURONEWS</summary>
+		<description lang="de_DE">euronews bietet eine einzigartige Perspektive auf das Weltgeschehen. euronews gibt Menschen die Möglichkeit, sich eine eigene Meinung zu bilden, indem sachliche Analysen und eine Vielzahl von Standpunkten dargestellt werden.[CR]euronews Weltnachrichten täglich 24 Stunden gibt es in 12 versch. Ausgaben auf Arabisch, Englisch, Französisch, Deutsch, Griechisch, Ungarisch, Italienisch, Persisch, Portugiesisch, Russisch, Spanisch und Türkisch.</description>
+		<description lang="en_GB">euronews offers a unique perspective on world affairs. euronews gives people the opportunity to form their own opinion, by presenting factual analysis and a variety of viewpoints.[CR]euronews World news daily 24 hours are available in 12 different editions in Arabic, English, French, German, Greek, Hungarian, Italian, Persian, Portuguese, Russian, Spanish and Turkish.</description>
+		<disclaimer lang="de_DE">Die von diesem Addon dargestellten Inhalte werden von den Erstellern des Addons weder gehostet oder verbreitet, noch stehen die Ersteller in irgendeiner Beziehung zu den Anbietern des Inhalts.</disclaimer>
+		<disclaimer lang="en_GB">The author does not host or distribute any of the content displayed by this addon. The author does not have any affiliation with the content providers.</disclaimer>
 		<language></language>
 		<platform>all</platform>
 		<license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
 		<forum>https://www.kodinerds.net/index.php/Thread/55451-L0REs-Blog/</forum>
 		<website>https://de.euronews.com/</website>
-		<email>andreas at vogler dot name</email>
+		<email></email>
 		<source>https://github.com/kodinerds/repo/tree/master/plugin.video.euronews_com</source>
 		<assets>
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 2.1.2  (16.02.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Es werden KEINE Unterordner der Startordner angezeigt
-- optimized: Doppelte Ordner werden jetzt herausgefiltert
-- added: Wenn KEINE Videos im Ordner vorhanden sind - Meldung eingebaut
+		<news>[B][COLOR orangered]Version 2.1.3  (14.07.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Es werden KEINE Ordner in der Übersicht angezeigt (Webseite und Quelltext verändert)
+- optimized: Bei Auswahl = Bev. mit Youtube abspielen - wird jetzt überprüft ob der YT-Link existiert, wenn nicht vorh. wird der Standardlink abgespielt
 		</news>
 	</extension>
 </addon>
