@@ -5,7 +5,7 @@
 		<setting label="30110" type="select" id="language" lvalues="30111|30112|30113|30114|30115|30116|30117|30118|30119|30120|30121|30122|30123" default="0" option="int"/>
 		<setting type="sep"/>
 		<setting label="30231" type="lsep"/>
-		<setting label="30124" type="bool" id="preferredStream_YOUTUBE" default="true"/>
+		<setting label="30124" type="bool" id="YOUTUBE_LINK" default="true"/>
 		<setting label="30350" type="text" option="readable"/>
 	</category>
 </settings>
